# non-local-scene-flow

./: InputParameters.m  main.m
MEX-files/MEXs/: mexBuildDiffusivitySmooth.mexa64  mexBuildMatricesAb.mexa64  mexBuildOcclusionBinary.mexa64  mexBuildOcclusionMaps.mexa64  mexBuildProjectionMaps.mexa64  mexBuildRobustnessData.mexa64  mexBuildWarpedImages.mexa64  mexComputeLocalDisparities.mexa64  mexComputePartialsUnknowns.mexa64  mexComputeQuickDisparities.mexa64  mexComputeSegmentPlanes.mexa64  mexConnectedSegments.mexa64  mexConsistentFill.mexa64  mexCrossValidation.mexa64  mexGetXYfromZ.mexa64  mexIterativeSolver.mexa64  mexKMeans9D.mexa64  mexMedianFilter.mexa64  mexMergedSegments.mexa64  mexNonLocalSceneFlow.mexa64  mexProjection3Dto2D.mexa64  mexSegmentSimilarities.mexa64
MEX-files/src/: BUILD  CMakeLists.txt  RUN  main.cpp
MEX-files/src/MEXs/: CMakeLists.txt  mexBuildDiffusivitySmooth.cpp  mexBuildMatricesAb.cpp  mexBuildOcclusionBinary.cpp  mexBuildOcclusionMaps.cpp  mexBuildProjectionMaps.cpp  mexBuildRobustnessData.cpp  mexBuildWarpedImages.cpp  mexComputeLocalDisparities.cpp  mexComputePartialsUnknowns.cpp  mexComputeSegmentPlanes.cpp  mexConnectedSegments.cpp  mexConsistentFill.cpp  mexCrossValidation.cpp  mexGetXYfromZ.cpp  mexGradient.cpp  mexIterativeSolver.cpp  mexKMeans9D.cpp  mexMergedSegments.cpp  mexNonLocalSceneFlow.cpp  mexProjection3Dto2D.cpp  mexSegmentSimilarities.cpp
MEX-files/src/libs/: CMakeLists.txt
MEX-files/src/libs/libIO/: file.cpp  file.hpp  pgm.cpp  pgm.hpp  viewMatlab.cpp  viewMatlab.hpp
MEX-files/src/libs/libImgProc/: colour.cpp  colour.hpp  differentiation.cpp  differentiation.hpp  disparity.cpp  disparity.hpp  filters.cpp  filters.hpp  segmentation.cpp  segmentation.hpp
MEX-files/src/libs/libMath/: matrix.cpp  matrix.hpp  metric.cpp  metric.hpp
MEX-files/src/libs/libSceneFlow/: nonLocalSceneFlow.cpp  nonLocalSceneFlow.hpp
MEX-files/src/structs/: CMakeLists.txt  structs.hpp
data/: openni_config.xml
data/CarpetBall/GroundTruth/Z/: Z_0000.txt
data/CarpetBall/GroundTruth/u/: u_0000.txt
data/CarpetBall/GroundTruth/v/: v_0000.txt
data/CarpetBall/GroundTruth/w/: w_0000.txt
data/CarpetBall/ProjMat/: CMat4.txt  TMat1.txt  TMat2.txt  TMat3.txt  TMat4.txt
data/Daimler/: Daimler_t0_0.pgm  Daimler_t0_1.pgm  Daimler_t1_0.pgm  Daimler_t1_1.pgm
data/Daimler/GroundTruth/Z/: Z_0000.txt
data/Daimler/GroundTruth/u/: u_0000.txt
data/Daimler/GroundTruth/v/: v_0000.txt
data/Daimler/GroundTruth/w/: w_0000.txt
data/Daimler/ProjMat/: CMat1.txt  TMat1.txt
data/Hand/: Hand_t0_0.pgm  Hand_t0_1.pgm  Hand_t1_0.pgm  Hand_t1_1.pgm
data/Hand/ProjMat/: CMat0.txt  TMat1.txt
data/Kitti0/ProjMat/: CMat0.txt  CMat1.txt  TMat0.txt
data/Kitti1/ProjMat/: TMat1.txt
data/Kitti2/ProjMat/: CMat0.txt
data/Rectified-Cars/ProjMat/: RMat0.txt  TMat1.txt
data/Rectified-Cat/ProjMat/: CMat0.txt  CMat2.txt  RMat1.txt
data/Rectified-Maria/ProjMat/: CMat1.txt  RMat2.txt  TMat2.txt
data/Teddy/: Teddy_t0_2.pgm  Teddy_t0_3.pgm  Teddy_t1_3.pgm
data/Teddy/GroundTruth/: Z.pgm  Zt.pgm
data/Teddy/ProjMat/: CMat1.txt  CMat3.txt  RMat2.txt  TMat1.txt  TMat2.txt  TMat3.txt
matlab/: CameraParameters.m  artificialScene.m  buildProjMatrices.m  buildPyramid.m  depthEstimation.m  getDfromZ.m  getZfromD.m  nonLocalSceneFlow.m  projection3Dto2DAll.m
matlab/Display/: computeEvaluation.m  showResults.m  viewSegmentContour.m  viewSegmentation.m
matlab/IO/: getFrameImages.m  printText.m  readTxtToMatrix.m  saveOutput.m  storeMatrixToTxt.m
matlab/Test/: testDisparity.m  testSuperPixels.m
matlab/Wrappers/: SegmentationPose.m
